--- a/404.html
+++ b/404.html
@@ -1,1 +1,83 @@
-<p>Test</p>
+
+<!DOCTYPE html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en"> <!--<![endif]-->
+
+<head>
+    <meta charset="utf-8" />
+    <title>404 Page not found!</title>
+    <!-- Libs CSS -->
+    <link type="text/css" media="all" href="404_files/bootstrap.min.css" rel="stylesheet" />
+    <!-- Template CSS -->
+    <link type="text/css" media="all" href="404_files/style.css" rel="stylesheet" />
+    <!-- Responsive CSS -->
+    <link type="text/css" media="all" href="404_files/response.css" rel="stylesheet" />
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="144x144" href="404_files/favicon144x144.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="404_files/favicon114x114.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="404_files/favicon72x72.png" />
+    <link rel="apple-touch-icon" href="assets/img/favicons/favicon57x57.png" />
+    <link rel="shortcut icon" href="assets/img/favicons/favicon.png" />
+    <!-- Google Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+
+</head>
+<body>
+
+    <!-- Load page -->
+    <div class="animationload">
+        <div class="loader">
+        </div>
+    </div>
+    <!-- End load page -->
+
+
+    <!-- Content Wrapper -->
+    <div id="wrapper">
+        <div class="container">
+            <div class="col-xs-12 col-sm-7 col-lg-7">
+                <!-- Info -->
+                <div class="info">
+                    <h1>404</h1>
+                    <h2>page not found</h2>
+                    <p>The page you are looking for was moved, removed,
+                        renamed or might never existed.</p>
+                    <a href="#" class="btn">Go Home</a>
+                    <a href="#" class="btn btn-brown">Contact Us</a>
+                </div>
+                <!-- end Info -->
+            </div>
+
+            <div class="col-xs-12 col-sm-5 col-lg-5 text-center">
+                <!-- Monkey -->
+                <div class="monkey">
+                    <img src="./assets/img/monkey.gif" alt="Monkey" />
+                </div>
+                <!-- end Monkey -->
+            </div>
+
+        </div>
+        <!-- end container -->
+    </div>
+    <!-- end Content Wrapper -->
+
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="assets/js/modernizr.custom.js" type="text/javascript"></script>
+    <script src="assets/js/jquery.nicescroll.min.js" type="text/javascript"></script>
+    <script src="assets/js/scripts.js" type="text/javascript"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</body>
+</html>
