--- a/404.html
+++ b/404.html
@@ -20,8 +20,8 @@
     <link rel="apple-touch-icon" sizes="144x144" href="404_files/favicon144x144.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="404_files/favicon114x114.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="404_files/favicon72x72.png" />
-    <link rel="apple-touch-icon" href="assets/img/favicons/favicon57x57.png" />
-    <link rel="shortcut icon" href="assets/img/favicons/favicon.png" />
+    <link rel="apple-touch-icon" href="404_files/favicon57x57.png" />
+    <link rel="shortcut icon" href="404_files/favicon.png" />
     <!-- Google Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
