--- a/404.html
+++ b/404.html
@@ -67,11 +67,11 @@
 
 
     <!-- Scripts -->
-    <script src="assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="assets/js/modernizr.custom.js" type="text/javascript"></script>
-    <script src="assets/js/jquery.nicescroll.min.js" type="text/javascript"></script>
-    <script src="assets/js/scripts.js" type="text/javascript"></script>
+    <script src="404_files/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <script src="404_files/bootstrap.min.js" type="text/javascript"></script>
+    <script src="404_files/modernizr.custom.js" type="text/javascript"></script>
+    <script src="404_files/jquery.nicescroll.min.js" type="text/javascript"></script>
+    <script src="404_files/scripts.js" type="text/javascript"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
