--- a/404.html
+++ b/404.html
@@ -55,7 +55,7 @@
             <div class="col-xs-12 col-sm-5 col-lg-5 text-center">
                 <!-- Monkey -->
                 <div class="monkey">
-                    <img src="./assets/img/monkey.gif" alt="Monkey" />
+                    <img src="https://imgur.com/0UxNvU3.gif" alt="404 Man" />
                 </div>
                 <!-- end Monkey -->
             </div>
