--- a/404.html
+++ b/404.html
@@ -46,8 +46,8 @@
                     <h2>page not found</h2>
                     <p>The page you are looking for was moved, removed,
                         renamed or might never existed.</p>
-                    <a href="#" class="btn">Go Home</a>
-                    <a href="#" class="btn btn-brown">Contact Us</a>
+                    <a href="https://0mniscient.github.io/" class="btn">Go Home</a>
+                    <a href="https://0mniscient.github.io/docs" class="btn">Go to Docs</a>
                 </div>
                 <!-- end Info -->
             </div>
