--- a/404.html
+++ b/404.html
@@ -53,11 +53,11 @@
             </div>
 
             <div class="col-xs-12 col-sm-5 col-lg-5 text-center">
-                <!-- Monkey -->
-                <div class="monkey">
+                <!-- Man -->
+                <div class="man">
                     <img src="https://imgur.com/0UxNvU3.gif" alt="404 Man" />
                 </div>
-                <!-- end Monkey -->
+                <!-- end Man -->
             </div>
 
         </div>
