--- a/docs.html
+++ b/docs.html
@@ -366,14 +366,14 @@ $('#toc').on('click', 'a', function() {
 
 <ul>
   <li>
-    <p><a href="#">How to install on Mac</a></p>
+    <p><a href="/install_mac.html">How to install on Mac</a></p>
   </li>
 </ul>
 
 <h3 id="mac">Linux</h3>
 
 <ul>
-  <li><a href="#">How to install on Linux</a></li>
+  <li><a href="/install_linux.html">How to install on Linux</a></li>
 </ul>
 
 <h2 id="how-to-use">How to use</h2>
