--- a/install_linux.html
+++ b/install_linux.html
@@ -344,7 +344,7 @@ $('#toc').on('click', 'a', function() {
 
 <h2 id="installation">Installation</h2>
 
-<p>First thing first head on over to the <a href="https://betterdiscord.net/home/">BetterDiscord</a> site.</p>
+<div class="unavailable"><p><b>SORRY! NOT AVAILABLE FOR LINUX USERS YET!</b></p></div>
 
 
 <h2 id="updates">Updates</h2>
