--- a/plugin_api.html
+++ b/plugin_api.html
@@ -350,25 +350,25 @@ $('#toc').on('click', 'a', function() {
   </li>
 
 <p><code class="highlighter-rouge">
-//Join a server with invite code
-BdApi.joinServer("code");
-//Inject css to `head` element with identifier, don't forget to remove it on stop
-BdApi.injectCSS("id", "css");
-//Clear your css
-BdApi.clearCSS("id");
-//Interact with other plugins
-BdApi.getPlugin("name");
-//Currently pointless since the ipc doesn't have any backend returns
-BdApi.getIpc();
-//Get the BetterDiscord core module
-BdApi.getCore();
-//Attempts to return username by userid
-BdApi.getUserIdByName("name");
-//Attempts to return userid by username
-BdApi.getUserNameById("id");
-//BdApi.setPlaying("game"); Disabled for now
-//BdApi.setStatus("status"); Disabled for now
-//Displays a simple alert box, will be moved to BdApi.alert("title", "content") soon
+//Join a server with invite code<br>
+BdApi.joinServer("code");<br>
+//Inject css to `head` element with identifier, don't forget to remove it on stop<br>
+BdApi.injectCSS("id", "css");<br>
+//Clear your css<br>
+BdApi.clearCSS("id");<br>
+//Interact with other plugins<br>
+BdApi.getPlugin("name");<br>
+//Currently pointless since the ipc doesn't have any backend returns<br>
+BdApi.getIpc();<br>
+//Get the BetterDiscord core module<br>
+BdApi.getCore();<br>
+//Attempts to return username by userid<br>
+BdApi.getUserIdByName("name");<br>
+//Attempts to return userid by username<br>
+BdApi.getUserNameById("id");<br>
+//BdApi.setPlaying("game"); Disabled for now<br>
+//BdApi.setStatus("status"); Disabled for now<br>
+//Displays a simple alert box, will be moved to BdApi.alert("title", "content") soon<br>
 Core.prototype.alert("title", "text")</code></p>
 
 <div class="tags">
