--- a/install_win.html
+++ b/install_win.html
@@ -375,6 +375,7 @@ $('#toc').on('click', 'a', function() {
      <b>Tags: </b>
     <a href="https://0mniscient.github.io/install_win.html" class="btn btn-default navbar-btn cursorNorm" role="button">install_win</a>
     <a href="https://0mniscient.github.io/install_mac.html" class="btn btn-default navbar-btn cursorNorm" role="button">install_mac</a>
+        <a href="https://0mniscient.github.io/install_linux.html" class="btn btn-default navbar-btn cursorNorm" role="button">install_linux</a>
 </div>
 
     
