--- a/install_linux.html
+++ b/install_linux.html
@@ -352,7 +352,8 @@ $('#toc').on('click', 'a', function() {
 <p>Every time there is an update for BetterDiscord you will have to re-install it so just go through this process again</p>
 
 <div class="tags">
-     <b>Tags: </b>
+    <b>Tags: </b>
+    <a href="https://0mniscient.github.io/install_mac.html" class="btn btn-default navbar-btn cursorNorm" role="button">install_mac</a>
     <a href="https://0mniscient.github.io/install_win.html" class="btn btn-default navbar-btn cursorNorm" role="button">install_win</a>
     <a href="https://0mniscient.github.io/install_mac.html" class="btn btn-default navbar-btn cursorNorm" role="button">install_mac</a>
 </div>
