--- a/install_theme.html
+++ b/install_theme.html
@@ -344,13 +344,18 @@ $('#toc').on('click', 'a', function() {
 
 
 <p>Follow These instructions to install a theme.</p>
-
 <ul>
   <li>
     <p>Go to the BetterDiscord server and go to "theme-repo" and find a theme you want and click the link (Skip to step 4 if you are downloading elsewhere)</p>
   </li>
+  <li>
+    <p>Click the <b>raw</b> button on the top right.<br />
+<img src="https://i.imgur.com/suLtFED.png" alt="click raw button" /></p>
+  </li>
+  <li>
+  </ul>
 
-<p>Hello</p>
+
 
 <div class="tags">
     <b>Tags: </b>
