--- a/install_theme.html
+++ b/install_theme.html
@@ -350,9 +350,14 @@ $('#toc').on('click', 'a', function() {
   </li>
   <li>
     <p>Click the <b>raw</b> button on the top right.<br />
-<img src="https://i.imgur.com/suLtFED.png" alt="click raw button" /></p>
+<img src="https://imgur.com/IJGA7Am.png" alt="click raw button" /></p>
   </li>
   <li>
+    <p>Right Click and then click <code>Save as...</code></p>
+  </li>
+  <li>
+    <p>Save to <code>%appdata%\betterdiscord\themes\</code> make sure the extension is <code>.theme.css</code></p>
+  </li> 
   </ul>
 
 
