--- a/install_theme.html
+++ b/install_theme.html
@@ -356,7 +356,8 @@ $('#toc').on('click', 'a', function() {
     <p>Right Click and then click <code>Save as...</code></p>
   </li>
   <li>
-    <p>Save to <code>%appdata%\betterdiscord\themes\</code> make sure the extension is <code>.theme.css</code></p>
+    <p>Save to <code>%appdata%\betterdiscord\themes\</code> make sure the extension is <code>.theme.css</code><br />
+    <img src="https://imgur.com/jsDMk07.png" alt=".theme.css" /></p>
   </li> 
   </ul>
 
