--- a/install_theme.html
+++ b/install_theme.html
@@ -357,8 +357,15 @@ $('#toc').on('click', 'a', function() {
   </li>
   <li>
     <p>Save to <code>%appdata%\betterdiscord\themes\</code> make sure the extension is <code>.theme.css</code><br />
-    <img src="https://imgur.com/jsDMk07.png" alt=".theme.css" /></p>
-  </li> 
+    <img src="https://imgur.com/PiqwxGZ.png" alt=".theme.css" /></p>
+  </li>
+  <li>
+    <p>Now head back to Discord and do <code>CTRL+R</code> on your keyboard.</p>
+  </li>
+  <li>
+    <p>At last the final step activating the theme. Head back to Discord and do this <code>Settings>BetterDiscord>Themes>Check Mark the theme</code><br />
+    <img src="https://a.pomf.cat/jjozly.gif" alt="check mark theme" /></p>
+  </li>
   </ul>
 
 
