--- a/install_theme.html
+++ b/install_theme.html
@@ -368,6 +368,9 @@ $('#toc').on('click', 'a', function() {
   </li>
   </ul>
 
+<h2 id="updates">Updates</h2>
+
+<p>Every time there is an update for a theme you will have to go through this process again I know it's a pain :(</p>
 
 
 <div class="tags">
