--- a/install_mac.html
+++ b/install_mac.html
@@ -350,7 +350,7 @@ $('#toc').on('click', 'a', function() {
 
 <h2 id="updates">Updates</h2>
 
-<p>Every time there is an update for BetterDiscord you will have to re-install it so just go through this process again</p>
+<p>Every time there is an update for BetterDiscord you will have to download the new version and do this process again I know it's a pain I'm sorry :(</p>
 
 <div class="tags">
     <b>Tags: </b>
