--- a/docs.html
+++ b/docs.html
@@ -347,7 +347,7 @@ $('#toc').on('click', 'a', function() {
 
     
 
-  <p>BetterDiscord is in continuous development and new features get added all the time to better Discord to our needs. Stay tuned by <a href="#">joining the official server</a>!
+  <p>BetterDiscord is in continuous development and new features get added all the time to better Discord to our needs. Stay tuned by <a href="https://discordapp.com/invite/0Tmfo5ZbORCRqbAd">joining the official server</a>!
 <a href="#"><img src="https://discordapp.com/api/servers/86004744966914048/widget.png?style=banner5" /></a></p>
 
 <div class="alert alert-warning" role="alert"><i class="fa fa-warning"></i> <b>Important: </b>These docs are undergoing contruction!</div>
