--- a/install_theme.html
+++ b/install_theme.html
@@ -349,7 +349,7 @@ $('#toc').on('click', 'a', function() {
     <p>Go to the BetterDiscord server and go to "theme-repo" and find a theme you want and click the link (Skip to step 4 if you are downloading elsewhere)</p>
   </li>
   <li>
-    <p>Click the <b>raw</b> button on the top right.<br />
+    <p>Click the <b>raw</b> button on the right.<br />
 <img src="https://imgur.com/IJGA7Am.png" alt="click raw button" /></p>
   </li>
   <li>
