--- a/install_plugin.html
+++ b/install_plugin.html
@@ -346,25 +346,25 @@ $('#toc').on('click', 'a', function() {
 <p>Follow These instructions to install a plugin.</p>
 <ul>
   <li>
-    <p>Go to the BetterDiscord server and go to "plugin-repo" and find a theme you want and click the link (Skip to step 4 if you are downloading elsewhere)</p>
+    <p>Go to the BetterDiscord server and go to "plugin-repo" and find a plugin you want and click the link (Skip to step 4 if you are downloading elsewhere)</p>
   </li>
   <li>
     <p>Click the <b>raw</b> button on the right.<br />
-<img src="https://imgur.com/IJGA7Am.png" alt="click raw button" /></p>
+<img src="https://imgur.com/fh7ICeA.png" alt="click raw button" /></p>
   </li>
   <li>
     <p>Right Click and then click <code>Save as...</code></p>
   </li>
   <li>
     <p>Save to <code>%appdata%\betterdiscord\plugins\</code> make sure the extension is <code>.plugin.js</code><br />
-    <img src="https://imgur.com/PiqwxGZ.png" alt=".plugin.js" /></p>
+    <img src="https://imgur.com/eAMRGmg.png" alt=".plugin.js" /></p>
   </li>
   <li>
     <p>Now head back to Discord and do <code>CTRL+R</code> on your keyboard.</p>
   </li>
   <li>
     <p>At last the final step activating the theme. Head back to Discord and do this <code>Settings>BetterDiscord>Plugins>Check Mark the plugin</code><br />
-    <img src="https://a.pomf.cat/jjozly.gif" alt="check mark theme" /></p>
+    <img src="https://a.pomf.cat/adpytl.gif" alt="check mark theme" /></p>
   </li>
   </ul>
 
