--- a/docs.html
+++ b/docs.html
@@ -16,10 +16,14 @@
 <link rel="stylesheet" href="doc_files/lavish-bootstrap.css">
 <link rel="stylesheet" href="doc_files/customstyles.css">
 <link rel="stylesheet" href="doc_files/theme-blue.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/top.css" media="screen">
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <script src="doc_files/jquery.navgoco.min.js"></script>
+<script src="js/top.js"></script>
+
 
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -417,6 +421,7 @@ $('#toc').on('click', 'a', function() {
 </div>
 <!-- /.container -->
     </div>
+    <a href="javascript:void(0);" id="scroll" title="Scroll to Top" style="display: none;">Top<span></span></a>
 </body>
 
 </html>
