--- a/install_theme.html
+++ b/install_theme.html
@@ -367,7 +367,7 @@ $('#toc').on('click', 'a', function() {
     <p>Now head back to Discord and do <code>CTRL+R</code> on your keyboard.</p>
   </li>
   <li>
-    <p>At last the final step, activating the theme. Head back to Discord and do this <code>Settings>BetterDiscord>Themes>Check Mark the theme</code><br />
+    <p>At last the final step, activating the theme. Head back to Discord and do this <b>Settings>BetterDiscord>Themes>Check Mark the theme</b><br />
     <img src="https://a.pomf.cat/jjozly.gif" alt="check mark theme" /></p>
   </li>
   </ul>
