--- a/install_plugin.html
+++ b/install_plugin.html
@@ -367,7 +367,7 @@ $('#toc').on('click', 'a', function() {
     <p>Now head back to Discord and do <code>CTRL+R</code> on your keyboard.</p>
   </li>
   <li>
-    <p>At last the final step, activating the plugin. Head back to Discord and do this <code>Settings>BetterDiscord>Plugins>Check Mark the plugin</code><br />
+    <p>At last the final step, activating the plugin. Head back to Discord and do this <b>Settings>BetterDiscord>Plugins>Check Mark the plugin</b><br />
     <img src="https://a.pomf.cat/adpytl.gif" alt="check mark theme" /></p>
   </li>
   </ul>
