--- a/general_problems.html
+++ b/general_problems.html
@@ -346,7 +346,23 @@ $('#toc').on('click', 'a', function() {
 
 <h2 id="FAQ">FAQ</h2>
 
+<p>Answers to general questions people asked frequently.</p>
 
+<h2 id="Can't Access Settings">Can't Access Settings</h2>
+
+<p>How to access Discords settings manually because of a theme/plugin problem.</p>
+
+<ul>
+  <li>
+    <p>Step 1: CTRL+,</p>
+  </li>
+  <li>
+    <p>Step 2: Disable/Remove the recently added Plugin/Theme/CSS</p>
+  </li>
+  <li>
+    <p>Step 3: CTRL+R</p>
+  </li>
+<ul>
 
 <div class="tags">
     <b>Tags: </b>
