--- a/general_problems.html
+++ b/general_problems.html
@@ -381,7 +381,28 @@ $('#toc').on('click', 'a', function() {
   <li>
     <p>Step 4: Enter <code>bdthemes = {};</code></p>
   </li>
+</ul>
+
+<h2 id="Bad CSS">How to remove bad CSS from the CSS tab manually?</h2>
+
+<p>Now you might have inserted CSS and can't remove it no more because of it here is how to remove it.</p>
 <ul>
+  <li>
+    <p>Step 1: Do CTRL+SHIFT+I on your keyboard</p>
+  </li>
+  <li>
+    <p>Step 2: Click the "Console" tab</p>
+  </li>
+  <li>
+    <p>Step 3: Enter <code>$('#customcss').empty()</code></p>
+  </li>
+  <li>
+    <p>Step 4: Now go back to the Custom CSS tab remove the CSS and uncheck "Live Update" and "Autosave"</p>
+  </li>
+  <li>
+    <p>Step 5: Restart Discord by doing CTRL+R</p>
+  </li>
+</ul>
 
 <div class="tags">
     <b>Tags: </b>
