--- a/general_problems.html
+++ b/general_problems.html
@@ -354,13 +354,13 @@ $('#toc').on('click', 'a', function() {
 
 <ul>
   <li>
-    <p>Step 1: CTRL+,</p>
+    <p>Step 1: Do CTRL+, on your keyboard</p>
   </li>
   <li>
     <p>Step 2: Disable/Remove the recently added Plugin/Theme/CSS</p>
   </li>
   <li>
-    <p>Step 3: CTRL+R</p>
+    <p>Step 3: Do CTRL+R on your keyboard</p>
   </li>
 </ul>
 
@@ -401,6 +401,48 @@ $('#toc').on('click', 'a', function() {
   </li>
   <li>
     <p>Step 5: Restart Discord by doing CTRL+R</p>
+  </li>
+</ul>
+
+<h2 id="No Themes">No themes showing up in BetterDiscord?</h2>
+
+<p>Please follow these steps to get your themes showing up again!</p>
+<ul>
+  <li>
+    <p>Step 1: Make sure you saved the theme to %appdata%\betterdiscord\themes\</p>
+  </li>
+  <li>
+    <p>Step 2: Make sure the themes file extension is <code>.theme.css</code></p>
+  </li>
+  <li>
+    <p>Step 3: Make sure the themes 1st line of CSS contains the META tag</p>
+  </li>
+  <li>
+    <p>Step 4: Head back to Discord and CTRL+R on your keyboard</p>
+  </li>
+  <li>
+    <p>Step 5: If step 4 didn't work please reinstall BetterDiscord</p>
+  </li>
+</ul>
+
+<h2 id="No Plugins">No themes showing up in BetterDiscord?</h2>
+
+<p>Please follow these steps to get your Plugins showing up again!</p>
+<ul>
+  <li>
+    <p>Step 1: Make sure you saved the plugin to %appdata%\betterdiscord\plugins\</p>
+  </li>
+  <li>
+    <p>Step 2: Make sure the plugins file extension is <code>.plugin.js</code></p>
+  </li>
+  <li>
+    <p>Step 3: Make sure the themes 1st line of Javascript contains the META tag</p>
+  </li>
+  <li>
+    <p>Step 4: Head back to Discord and CTRL+R on your keyboard</p>
+  </li>
+  <li>
+    <p>Step 5: If step 4 didn't work please reinstall BetterDiscord</p>
   </li>
 </ul>
 
