--- a/general_problems.html
+++ b/general_problems.html
@@ -425,7 +425,7 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 
-<h2 id="No Plugins">No themes showing up in BetterDiscord?</h2>
+<h2 id="No Plugins">No plugins showing up in BetterDiscord?</h2>
 
 <p>Please follow these steps to get your Plugins showing up again!</p>
 <ul>
@@ -446,11 +446,23 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 
-<div class="tags">
-    <b>Tags: </b>
-</div>
+<h2 id="Change Background">How to change the background image of a transparent theme?</h2>
 
-    
+<p>Here are the steps to get your theme's background changed to your liking!</p>
+<ul>
+  <li>
+    <p>Step 1: Open the theme file with a text editor (Not Notepad)</p>
+  </li>
+  <li>
+    <p>Step 2: Search for `.app` and `.callout-backdrop` in the CSS they might be in the same line of CSS</p>
+  </li>
+  <li>
+    <p>Step 3: Replace the link(s) with your image link. Please note that the link needs to be <code>HTTPS://</code> and end with a file extension such as png,jpg,gif etc.</p>
+  </li>
+  <li>
+    <p>Step 4: Now finally restart Discord (CTRL+R) and you will see your background!</p>
+  </li>
+</ul>
 
 </div>
 
