--- a/general_problems.html
+++ b/general_problems.html
@@ -338,7 +338,7 @@ $('#toc').on('click', 'a', function() {
 });
 </script>
 
-<div id="toc"></div>
+<div id="toc" class="tocexpanded"></div>
 
     
     
