--- a/general_problems.html
+++ b/general_problems.html
@@ -464,6 +464,15 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 
+<h2 id="emotes">When will BetterDiscord emotes be updated?</h2>
+
+<p>BTTV emotes are updated weekly by EhsanKia from the BetterDiscord server</p>
+<ul>
+  <li>
+    <p>You can check here if it has been updated <a href="https://github.com/Jiiks/BetterDiscordApp/tree/master/data">here</a> the file is called <code>emotedata_bttv.json</code></p>
+  </li>
+</ul>
+
 </div>
 
 <hr class="shaded"/>
