--- a/faq.html
+++ b/faq.html
@@ -475,7 +475,7 @@ $('#toc').on('click', 'a', function() {
 
 <h2 id="blacklisted emotes">Why are some emotes not showing up?</h2>
 
-<p>We as a community hate common used words turning into emotes so we have decided to blacklisted them.</p>
+<p>We as a community hate emotes getting in our sentences without wanting to put them there so we have decided to blacklisted them.</p>
 <ul>
   <li>
     <p>3 letter emotes are blacklisted. LUL converts to LUUL</p>
