--- a/making_theme.html
+++ b/making_theme.html
@@ -342,6 +342,23 @@ $('#toc').on('click', 'a', function() {
     
 <div class="alert alert-warning" role="alert"><i class="fa fa-warning"></i> <b>Important: </b>Remember this is undergoing contruction!</div>
 
+<h2 id="Rules">Rules</h2>
+
+<p>Rules to making a theme and releasing it to the public.</p>
+<ul>
+  <li>
+    <p>If you are using another theme as a base please follow these rules.</p>
+    <li>
+    <p>Ask the theme author for permission to use it as a base.</p>
+  </li>
+  </li>
+  <li>
+
+
+<h2 id="Template">Template</h2>
+
+<p>mhm.</p>
+
 <h2 id="Tutorial">Tutorial</h2>
 
 <p>mhm.</p>
