--- a/making_theme.html
+++ b/making_theme.html
@@ -348,12 +348,11 @@ $('#toc').on('click', 'a', function() {
 <ul>
   <li>
     <p>If you are using another theme as a base please follow these rules.</p>
-    <li>
-    <p>Ask the theme author for permission to use it as a base.</p>
+    <ul>
+    <li><p>Ask the theme author for permission to use it as a base.</p></li>
+    </ul>
   </li>
-  </li>
-  <li>
-
+</ul>
 
 <h2 id="Template">Template</h2>
 
