--- a/making_theme.html
+++ b/making_theme.html
@@ -23,11 +23,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <script src="doc_files/jquery.navgoco.min.js"></script>
 <script src="js/top.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenLite.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/easing/EasePack.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/plugins/CSSPlugin.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/plugins/AttrPlugin.min.js"></script>
-<script src="js/elastic-progress.min.js"></script>
 
 
 <script src="syntax.js"></script>
@@ -371,25 +366,12 @@ $('#toc').on('click', 'a', function() {
 <ul>
   <li>
     <p>Template was made by Hammock.<br />
-<img src="https://imgur.com/UcEPr6n.png" alt="Template download" /></p>
+<a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/transparent.theme.css" class="btn right">
+    <span class="left title"><span class="slant-left"></span>Download</span>
+    <span class="right icon icon-cloud-download"></span>
+    </a></p>
   </li>
   <li>
-    
-    <div class="Download" role="button" aria-label="Download file"></div>
-<script>var progress=new ElasticProgress('.Download', {
-  colorFg:"#FF0000",
-  buttonSize:80,
-  arrowDirection:"down",
-  //...
-})
-onClick:function(){
-    progress.open();
-  }
-});
-function theFunctionYouAreUsingToCheckProgress(){
-  // ...
-  progress.setValue(value);
-}</script>
 
 <h2 id="Tutorial">Tutorial</h2>
 
