--- a/making_theme.html
+++ b/making_theme.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="doc_files/theme-blue.css">
 <link rel="stylesheet" href="syntax.css">
 <link rel="stylesheet" type="text/css" href="stylesheets/top.css" media="screen">
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -367,9 +368,9 @@ $('#toc').on('click', 'a', function() {
   <li>
     <p>Template was made by Hammock.<br />
 <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/transparent.theme.css" class="btn right">
-    <span class="left title"><span class="slant-left"></span>Download</span>
-    <span class="right icon icon-cloud-download"></span>
-    </a></p>
+        <span class="left title"><span class="slant-left"></span>Download</span>
+        <span class="right icon icon-cloud-download"></span>
+      </a></p>
   </li>
   <li>
 
