--- a/making_theme.html
+++ b/making_theme.html
@@ -359,6 +359,15 @@ $('#toc').on('click', 'a', function() {
 ------------------------------</code></pre></div></li>
     </ul>
   </li>
+  <li>
+    <p>Do not release a theme if you simply just changed the background image and changed the default colors of an existing theme.</p>
+  </li>
+  <li>
+    <p>Giving credit to the author doesn't give you permission to release an exisiting theme with little to no changes.</p>
+  </li>
+  <li>
+    <p>Breaking any of the rules will result in your theme being deleted.</p>
+  </li>
 </ul>
 
 <h2 id="Template">Template</h2>
@@ -367,12 +376,9 @@ $('#toc').on('click', 'a', function() {
 <ul>
   <li>
     <p>Template was made by Hammock.<br />
-<a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/transparent.theme.css" class="btn right">
-        <span class="left title"><span class="slant-left"></span>Download</span>
-        <span class="right icon icon-cloud-download"></span>
-      </a></p>
+<a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/transparent.theme.css">Download</a></p>
   </li>
-  <li>
+    </ul>
 
 <h2 id="Tutorial">Tutorial</h2>
 
