--- a/making_theme.html
+++ b/making_theme.html
@@ -337,7 +337,7 @@ $('#toc').on('click', 'a', function() {
 });
 </script>
 
-<div id="toc" class="tocexpanded"></div>
+<div id="toc"></div>
 
     
     
