--- a/faq.html
+++ b/faq.html
@@ -452,7 +452,7 @@ $('#toc').on('click', 'a', function() {
     <p>Step 1: Open the theme file with a text editor (Not Notepad)</p>
   </li>
   <li>
-    <p>Step 2: Search for `.app` and `.callout-backdrop` in the CSS they might be in the same line of CSS</p>
+    <p>Step 2: Search for <code>.app</code> and <code>.callout-backdrop</code> in the CSS. In some cases they might be in the same line of CSS</p>
   </li>
   <li>
     <p>Step 3: Replace the link(s) with your image link. Please note that the link needs to be <code>HTTPS://</code> and end with a file extension such as png,jpg,gif etc.</p>
