--- a/making_theme.html
+++ b/making_theme.html
@@ -17,7 +17,6 @@
 <link rel="stylesheet" href="doc_files/theme-blue.css">
 <link rel="stylesheet" href="syntax.css">
 <link rel="stylesheet" type="text/css" href="stylesheets/top.css" media="screen">
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -399,7 +398,7 @@ $('#toc').on('click', 'a', function() {
   </li>
   <li>
     <p>When you go to <code>themes</code> in the BetterDiscord settings you should see this.<br />
-<img src="http://i.imgur.com/XDcIv6s.png" alt="ScarryNight in BetterDiscord settings" /></p>
+<img src="https://i.imgur.com/XDcIv6s.png" alt="ScarryNight in BetterDiscord settings" /></p>
   </li>
   <li>
     <p>You will notice enabling it will do nothing that's because we haven't added any CSS in the file yet lets insert some basic CSS paste this in the file under the META tag.
