--- a/install_theme.html
+++ b/install_theme.html
@@ -366,7 +366,7 @@ $('#toc').on('click', 'a', function() {
   </li>
   <li>
     <p>At last the final step, activating the theme. Head back to Discord and do this <b>Settings>BetterDiscord>Themes>Check Mark the theme</b><br />
-    <img src="https://a.pomf.cat/jjozly.gif" alt="check mark theme" /></p>
+    <img src="https://imgur.com/WmXYr4J.gif" alt="check mark theme" /></p>
   </li>
   </ul>
 
