--- a/install_plugin.html
+++ b/install_plugin.html
@@ -366,7 +366,7 @@ $('#toc').on('click', 'a', function() {
   </li>
   <li>
     <p>At last the final step, activating the plugin. Head back to Discord and do this <b>Settings>BetterDiscord>Plugins>Check Mark the plugin</b><br />
-    <img src="https://imgur.com/y3ROfgM.gif" alt="check mark theme" /></p>
+    <img src="https://imgur.com/y3ROfgM.gif" alt="check mark plugin" /></p>
   </li>
   </ul>
 
