--- a/faq.html
+++ b/faq.html
@@ -483,6 +483,18 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 
+<h2 id="Mac Directories">What are Macs directories?!</h2>
+
+<p>I forgot about Mac users! I'm sorry everything is the same for Mac users other than where you install Themes and Plugins.</p>
+<ul>
+  <li>
+    <p>Themes: <code>~/Library/Preferences/BetterDiscord/themes</code></p>
+  </li>
+  <li>
+    <p>Plugins: <code>~/Library/Preferences/BetterDiscord/plugins</code></p>
+  </li>
+</ul>
+
 </div>
 
 <hr class="shaded"/>
