--- a/faq.html
+++ b/faq.html
@@ -346,7 +346,7 @@ $('#toc').on('click', 'a', function() {
 
 <p>Answers to general questions people asked frequently.</p>
 
-<h2 id="Can't Access Settings">Can't Access Settings</h2>
+<h2 id="No_Settings">Can't Access Settings</h2>
 
 <p>How to access Discords settings manually because of a theme/plugin problem.</p>
 
@@ -362,7 +362,7 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 
-<h2 id="Ghost Theme">Removed a theme but still shows up</h2>
+<h2 id="Ghost_Theme">Removed a theme but still shows up</h2>
 
 <p>This is what we call a Ghost Theme it's a small bug in BetterDiscord.</p>
 <b>WARNING:</b> This will erase all of your themes!
@@ -381,7 +381,7 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 
-<h2 id="Bad CSS">How to remove bad CSS from the CSS tab manually?</h2>
+<h2 id="Bad_CSS">How to remove bad CSS from the CSS tab manually?</h2>
 
 <p>Now you might have inserted CSS and can't remove it no more because of it here is how to remove it.</p>
 <ul>
@@ -402,7 +402,7 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 
-<h2 id="No Themes">No themes showing up in BetterDiscord?</h2>
+<h2 id="No_Themes">No themes showing up in BetterDiscord?</h2>
 
 <p>Please follow these steps to get your themes showing up again!</p>
 <ul>
@@ -423,7 +423,7 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 
-<h2 id="No Plugins">No plugins showing up in BetterDiscord?</h2>
+<h2 id="No_Plugins">No plugins showing up in BetterDiscord?</h2>
 
 <p>Please follow these steps to get your Plugins showing up again!</p>
 <ul>
@@ -444,7 +444,7 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 
-<h2 id="Change Background">How to change the background image of a transparent theme?</h2>
+<h2 id="Change_Background">How to change the background image of a transparent theme?</h2>
 
 <p>Here are the steps to get your theme's background changed to your liking!</p>
 <ul>
@@ -462,7 +462,7 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 
-<h2 id="emotes">When will BetterDiscord emotes be updated?</h2>
+<h2 id="Emotes_Update">When will BetterDiscord emotes be updated?</h2>
 
 <p>BTTV emotes are updated weekly by EhsanKia from the BetterDiscord server</p>
 <ul>
@@ -471,7 +471,7 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 
-<h2 id="blacklisted emotes">Why are some emotes not showing up?</h2>
+<h2 id="blacklisted_emotes">Why are some emotes not showing up?</h2>
 
 <p>We as a community hate emotes getting in our sentences without wanting to put them there so we have decided to blacklisted them.</p>
 <ul>
@@ -483,7 +483,7 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 
-<h2 id="Mac Directories">What are Macs directories?!</h2>
+<h2 id="Mac_Directories">What are Macs directories?!</h2>
 
 <p>I forgot about Mac users! I'm sorry everything is the same for Mac users other than where you install Themes and Plugins.</p>
 <ul>
