--- a/docs.html
+++ b/docs.html
@@ -407,12 +407,7 @@ $('#toc').on('click', 'a', function() {
 <!-- /.container -->
     </div>
     <a href="javascript:void(0);" id="scroll" title="Scroll to Top" style="display: none;">Top<span></span></a>
-<script src="doc_files/jquery.navgoco.min.js"></script>
-<script src="js/top.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/2.0.0/anchor.min.js"></script>
-<script src="doc_files/toc.js"></script>
-<script src="doc_files/customscripts.js"></script>
+<script src="js/merged.js"></script>
 </body>
 
 </html>
