--- a/docs.html
+++ b/docs.html
@@ -8,14 +8,7 @@
 <meta name="keywords" content=" ">
 <title>Omni documentation  | BetterDiscord Documentation and Tutorials</title>
 
-<link rel="stylesheet" href="doc_files/syntax.css">
-<link rel="stylesheet" type="text/css" href="doc_files/font-awesome.min.css">
-<!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
-<link rel="stylesheet" href="doc_files/modern-business.css">
-<link rel="stylesheet" href="doc_files/lavish-bootstrap.css">
-<link rel="stylesheet" href="doc_files/customstyles.css">
-<link rel="stylesheet" href="doc_files/theme-blue.css">
-<link rel="stylesheet" type="text/css" href="stylesheets/top.css" media="screen">
+<link rel="stylesheet" href="stylesheets/merged.css">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
