--- a/making_theme.html
+++ b/making_theme.html
@@ -438,7 +438,7 @@ $('#toc').on('click', 'a', function() {
     <p>Now save the file and restart Discord (CTRL+R) and finally you will see Discord transparent to a certain extent.</p>
   </li>
   <li>
-    <p>To customize Discord to your own liking do CTRL+SHIFT+I in Discord and you will see the inspect element tool that will be your bestfriend as it helps you what has what classes.</p>
+    <p>To customize Discord to your own liking do CTRL+SHIFT+I in Discord and you will see the inspect element tool that will be your bestfriend as it helps you see what has what classes.</p>
   </li>
   <li>
     <p>If you are familiar with CSS you will know using <code>!important</code> is a bad habit so please don't use it unless it is needed.</p>
