--- a/making_theme.html
+++ b/making_theme.html
@@ -328,7 +328,7 @@ $('#toc').on('click', 'a', function() {
 
     
     
-<div class="alert alert-warning" role="alert"><i class="fa fa-warning"></i> <b>Important: </b>Remember this is undergoing contruction!</div>
+<div class="alert alert-warning" role="alert"><i class="fa fa-warning"></i> <b>Important: </b>Host your themes on Github! Soon it will be required for themes to be hosted on Github.</div>
 
 <h2 id="Rules">Rules</h2>
 
