--- a/404.html
+++ b/404.html
@@ -24,10 +24,9 @@
     <link rel="shortcut icon" href="404_files/favicon.png" />
     <!-- Google Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-
 </head>
 <body>
-
+<?php include_once("analyticstracking.php") ?>
     <!-- Load page -->
     <div class="animationload">
         <div class="loader">
