--- a/about.html
+++ b/about.html
@@ -71,6 +71,7 @@
     
 </head>
 <body>
+    <?php include_once("analyticstracking.php") ?>
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container topnavlinks">
