--- a/docs.html
+++ b/docs.html
@@ -75,6 +75,7 @@
     
 </head>
 <body>
+    <?php include_once("analyticstracking.php") ?>
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container topnavlinks">
