--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="js/top.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <body data-gr-c-s-loaded="true">
+  <?php include_once("analyticstracking.php") ?>
   
   <div class="top-rect"></div>
   <header><div class="headerimg"><center>
