--- a/plugin_api.html
+++ b/plugin_api.html
@@ -68,6 +68,7 @@
     
 </head>
 <body>
+    <?php include_once("analyticstracking.php") ?>
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container topnavlinks">
