--- a/404.html
+++ b/404.html
@@ -1,82 +1,57 @@
-
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if lt IE 7 ]><html lang=en class="ie ie6"><![endif]-->
+<!--[if IE 7 ]><html lang=en class="ie ie7"><![endif]-->
+<!--[if IE 8 ]><html lang=en class="ie ie8"><![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
-<html lang="en"> <!--<![endif]-->
-
-<head>
-    <meta charset="utf-8" />
-    <title>404 Page not found!</title>
-    <!-- Libs CSS -->
-    <link type="text/css" media="all" href="404_files/bootstrap.min.css" rel="stylesheet" />
-    <!-- Template CSS -->
-    <link type="text/css" media="all" href="404_files/style.css" rel="stylesheet" />
-    <!-- Responsive CSS -->
-    <link type="text/css" media="all" href="404_files/response.css" rel="stylesheet" />
-
-    <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="144x144" href="404_files/favicon144x144.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="404_files/favicon114x114.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="404_files/favicon72x72.png" />
-    <link rel="apple-touch-icon" href="404_files/favicon57x57.png" />
-    <link rel="shortcut icon" href="404_files/favicon.png" />
-    <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-</head>
-<body>
+<html lang=en>
+<!--<![endif]-->
+<meta charset=utf-8>
+<title>404 Page not found!</title>
+<!-- Libs CSS -->
+<link href=404_files/bootstrap.min.css rel=stylesheet media=all>
+<!-- Template CSS -->
+<link href=404_files/style.css rel=stylesheet media=all>
+<!-- Responsive CSS -->
+<link href=404_files/response.css rel=stylesheet media=all>
+<!-- Favicons -->
+<link href=404_files/favicon144x144.png rel=apple-touch-icon sizes=144x144>
+<link href=404_files/favicon114x114.png rel=apple-touch-icon sizes=114x114>
+<link href=404_files/favicon72x72.png rel=apple-touch-icon sizes=72x72>
+<link href=404_files/favicon57x57.png rel=apple-touch-icon>
+<link href=404_files/favicon.png rel="shortcut icon">
+<!-- Google Fonts -->
+<link href="http://fonts.googleapis.com/css?family=Raleway" rel=stylesheet>
 <?php include_once("analyticstracking.php") ?>
-    <!-- Load page -->
-    <div class="animationload">
-        <div class="loader">
+<!-- Load page -->
+<div class=animationload>
+    <div class=loader></div>
+</div>
+<!-- End load page -->
+<!-- Content Wrapper -->
+<div id=wrapper>
+    <div class=container>
+        <div class="col-xs-12 col-lg-7 col-sm-7">
+            <!-- Info -->
+            <div class=info>
+                <h1>404</h1>
+                <h2>page not found</h2>
+                <p>The page you are looking for was moved, removed, renamed or might never existed.</p><a class=btn href=https://0mniscient.github.io/>Go Home</a> <a class=btn href=https://0mniscient.github.io/docs>Go to Docs</a></div>
+            <!-- end Info -->
+        </div>
+        <div class="col-xs-12 col-lg-5 col-sm-5 text-center">
+            <!-- Man -->
+            <div class=man><img alt="404 Man" src=https://imgur.com/0UxNvU3.gif></div>
+            <!-- end Man -->
         </div>
     </div>
-    <!-- End load page -->
-
-
-    <!-- Content Wrapper -->
-    <div id="wrapper">
-        <div class="container">
-            <div class="col-xs-12 col-sm-7 col-lg-7">
-                <!-- Info -->
-                <div class="info">
-                    <h1>404</h1>
-                    <h2>page not found</h2>
-                    <p>The page you are looking for was moved, removed,
-                        renamed or might never existed.</p>
-                    <a href="https://0mniscient.github.io/" class="btn">Go Home</a>
-                    <a href="https://0mniscient.github.io/docs" class="btn">Go to Docs</a>
-                </div>
-                <!-- end Info -->
-            </div>
-
-            <div class="col-xs-12 col-sm-5 col-lg-5 text-center">
-                <!-- Man -->
-                <div class="man">
-                    <img src="https://imgur.com/0UxNvU3.gif" alt="404 Man" />
-                </div>
-                <!-- end Man -->
-            </div>
-
-        </div>
-        <!-- end container -->
-    </div>
-    <!-- end Content Wrapper -->
-
-
-    <!-- Scripts -->
-    <script src="404_files/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="404_files/bootstrap.min.js" type="text/javascript"></script>
-    <script src="404_files/modernizr.custom.js" type="text/javascript"></script>
-    <script src="404_files/jquery.nicescroll.min.js" type="text/javascript"></script>
-    <script src="404_files/scripts.js" type="text/javascript"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</body>
-</html>
+    <!-- end container -->
+</div>
+<!-- end Content Wrapper -->
+<!-- Scripts -->
+<script src=404_files/jquery-2.1.1.min.js></script>
+<script src=404_files/bootstrap.min.js></script>
+<script src=404_files/modernizr.custom.js></script>
+<script src=404_files/jquery.nicescroll.min.js></script>
+<script src=404_files/scripts.js></script>
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script><script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]-->
