--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js crossorigin=anonymous integrity=sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS></script>
 
 <body data-gr-c-s-loaded=true>
-    <?php include_once("analyticstracking.php") ?>
     <div class=top-rect></div>
     <header>
         <div class=headerimg>
@@ -150,3 +149,13 @@
             }()
         } catch (e) {}
     </script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-65593962-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
